--- a/home.html
+++ b/home.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset=UTF-8>
+    <meta name="format-detection" content="telephone=no">
+    <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>ПРОМПЕЧАТЬ - Домашняя</title>
