--- a/products.html
+++ b/products.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>ПРОМПЕЧАТЬ - ПРОДУКЦИЯ</title>
+    <title>Промпечать - Продукция</title>
   </head>
   <body>
     <div class="BLOCK_FIXED">
@@ -29,57 +29,57 @@
     <div class="BLOCK_HIDDEN_BIG"></div>
 
     <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 MOVE_HEADER_R">НАША ПРОДУКЦИЯ</div>
-    <div class="BLOCK PAGE_PADDING MOVE_HEADER_T">
-      <div class="BLOCK_PART_3 BACKGROUND_LGRAY">
+    <div class="BLOCK PAGE_PADDING MOVE_HEADER_T" style="align-items: stretch">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/journal.jpg" alt="Лечебное дело" title="Журнал"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Книги и журналы</div>
           <div>Изготавливаем книги, журналы, справочники, каталоги способом офсетной печати в виде блоков из сшитых
             либо сшитых и склееных между собой тетрадей.</div>
-            <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
         </div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 BACKGROUND_LGRAY">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/poster.jpg" alt="Афиша" title="Афиша"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Рекламная продукция</div>
           <div>Изготавливаем рекламные буклеты, афиши, листовки на полноцветных лазерных принтерах и многофункциональных устройствах либо офсетным способом печати.</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
         </div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 BACKGROUND_LGRAY">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/form.jpeg" alt="Коллективный авансовый отчет" title="Бланк"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Бланочная продукция и канцелярские журналы</div>
           <div>Изготавливаем гербовые бланки, путевые листы, журналы учета и регистрации, приходно-расходны книги</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
         </div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
       </div>
     </div>
-    <div class="BLOCK PAGE_PADDING MOVE_HEADER_T ANIMATION_DELAY_1">
-      <div class="BLOCK_PART_3 BACKGROUND_LGRAY">
+    <div class="BLOCK PAGE_PADDING MOVE_HEADER_T" style="align-items: stretch">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/certificate.jpeg" alt="Удостоверение" title="Удостоверение"></div>
-        <div class="PADDING_A_1" style="align-content: space-between">
+        <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Удостоверения, визитки</div>
           <div>Изготавливаем удостоверения, бейджи и визитные карточки</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
         </div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 BACKGROUND_LGRAY">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/diploma.jpg" alt="Грамота" title="Ганаровая грамата"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Поздравительная продукция</div>
           <div>Изготавливаем грамоты, папки поздравительного адреса, открытки</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
         </div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 BACKGROUND_LGRAY" style="align-items: flex-end">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/envelope.jpg" alt="Конверт Белагропромбанк" title="Конверт"></div>
         <div class="PADDING_A_1" style="align-content: space-between">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Конверты, папки, упаковка</div>
           <div>Печатаем на конвертах, изготавливаем упаковку, папки</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
         </div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       </div>
     </div>
 
