--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>ПРОМПЕЧАТЬ - КОНТАКТЫ</title>
+    <title>Промпечать - Контакты</title>
   </head>
   <body>
     <div class="BLOCK_FIXED">
@@ -34,7 +34,7 @@
     </div>
 
     <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
-      <div class="BLOCK_PART_2">
+      <div class="BLOCK_PART_2 MARGIN_A_05">
         <span class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 237 17 51</span>
@@ -46,9 +46,9 @@
         <span class="TEXT_GIGANTIC TEXT_BOLD">Пн Вт Ср Чт Пт: 8.00-16.30</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">Обед: 12.00-12.30</span>
       </div>
-      <div class="BLOCK_PART_2">
+      <div class="BLOCK_PART_2 MARGIN_A_05">
         <span class="BLOCK_HEADING">НАПИШИТЕ НАМ НА ПОЧТУ:</span>
-        <form name="INFO">
+        <form name="INFO" class="CONTENT_IN_WIDTH">
           <input class="INPUT MARGIN_B_2" type="text" name="NAME" placeholder="Имя" required><br>
           <input class="INPUT MARGIN_B_2" type="text" name="PHONE" placeholder="Номер телефона" required><br>
           <textarea class="TEXTAREA MARGIN_B_2" type="text" name="TEXTAREA" placeholder="Ваше сообщение" required></textarea><br>
