--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>ПРОМПЕЧАТЬ - О НАС</title>
+    <title>Промпечать - О нас</title>
   </head>
   <body>
     <div class="BLOCK_FIXED">
@@ -29,14 +29,14 @@
     <div class="BLOCK_HIDDEN_BIG"></div>
 
 <div class="BLOCK PAGE_PADDING PADDING_T_2 PADDING_B_2">
-  <div class="BLOCK_PART_3">
+  <div class="BLOCK_PART_3 MARGIN_A_05">
     <div class="TEXT_BOLD TEXT_BIG MOVE_HEADER_T">О&nbsp;НАС</div>
     <div><img class="SMALL_IMAGE" src="Images/About/Romayor-313.png" alt="Romayor 313" title="Adast Romayor 313"></div>
     <div class="TEXT_GREEN TEXT_BOLD">КТО&nbsp;МЫ</div>
     <div class="TEXT_SMALL MARGIN_B_2">Открытое акционерное общество "Промпечать" это малое полиграфическое предприятие полного цикла.
-      Мы работаем с 1997 года и имеем большой опыт полиграфического производства.</div>
+      Мы работаем с 1997 года и имеем большой опыт полиграфического производства</div>
     </div>
-  <div class="BLOCK_PART_3">
+    <div class="BLOCK_PART_3 MARGIN_A_05">
     <div class="TEXT_BOLD TEXT_BIG MARGIN_B_2 MOVE_HEADER_T">ЧТО&nbsp;МЫ&nbsp;ПРЕДЛАГАЕМ</div>
     <div class="FLEX_ROW">
       <div class="CIRCLE_SMALL TEXT_WHITE APPEARANCE">01</div>
@@ -50,7 +50,7 @@
       <div class="FLEX_1">
         <div class="TEXT_GREEN TEXT_BOLD">ОПЕРАТИВНОСТЬ</div>
         <div class="TEXT_SMALL MARGIN_B_2">Мы работаем с периодическими изданиями, поэтому стараемся предоставлять готовую продукцию нашим клиентам
-          в максимально короткие сроки без ущерба для качества.</div>
+          в максимально короткие сроки без ущерба для качества</div>
       </div>
     </div>
     <div class="FLEX_ROW">
@@ -59,7 +59,7 @@
         <div class="TEXT_GREEN TEXT_BOLD">УДОБНОЕ РАСПОЛОЖЕНИЕ</div>
         <div class="TEXT_SMALL MARGIN_B_2">Наше предприятие находится недалеко от центра города в отдельно стоящем здании
           с охраняемой территорией и парковочными местами для автомобилей и грузовиков, поэтому к нам не только удобно добираться,
-          но и нет необходимости в долгом поиске места для автомобиля.</div>
+          но и нет необходимости в долгом поиске места для автомобиля</div>
       </div>
     </div>
     <div class="FLEX_ROW">
@@ -71,7 +71,7 @@
       </div>
     </div>
   </div>
-  <div class="BLOCK_PART_3">
+  <div class="BLOCK_PART_3 MARGIN_A_05">
     <div class="TEXT_BIG TEXT_BOLD MARGIN_B_1 MOVE_HEADER_T">НАША&nbsp;ЛИЦЕНЗИЯ</div>
     <div><img class="SMALL_IMAGE" src="Images/About/publisher.jpeg" alt="Свидетельство издателя" title="Свидетельсво издателя"></div>
   </div>
