--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>ПРОМПЕЧАТЬ - Домашняя</title>
+    <title>Промпечать - Домашняя</title>
   </head>
   <body>
     <div class="BLOCK_FIXED">
@@ -47,7 +47,7 @@
 
     <div class="FLEX_ROW BACKGROUND_DBLUE TEXT_WHITE PADDING_A_5_10_5_10">
       <div class="TEXT_BIGGEST TEXT_BOLD TEXT_GOLD FLEX_BASIS_30">ДОБРО ПОЖАЛОВАТЬ!</div>
-      <div>Наша типография занимается полиграфическим производством начиная от флатовки бумажного ролика и заканчивая готовой книжно-журнальной продукцией.</div>
+      <div>Наша типография занимается полиграфическим производством начиная от флатовки бумажного ролика и заканчивая готовой книжно-журнальной продукцией</div>
     </div>
     <div class="FLEX_COLUMN PADDING_A_5_10_5_10">
       <div class="TEXT_HUGE TEXT_BOLD MARGIN_B_1">Наши услуги</div>
@@ -55,39 +55,47 @@
       <div class="TEXT_SLIM">Вы можете увидеть краткое описание каждого из основных циклов нашего производства нажав по ссылкам ниже</div>
     </div>
 
-    <div class="BLOCK PAGE_PADDING TEXT_CENTER PADDING_B_2">
-      <div class="BLOCK_PART_3 CONTENT_CENTER">
+    <div class="BLOCK PAGE_PADDING TEXT_CENTER">
+      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
         <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">01</div>
         <div class="BLOCK_HEADING">Допечатная подготовка</div>
-        <div class="BLOCK_DESCRIPTION">Подготовка макета, печатных форм, и бумаги</div>
-        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div class="BLOCK_DESCRIPTION">Подготовка макета, печатных форм и бумаги</div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_CENTER">
+      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
         <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">02</div>
         <div class="BLOCK_HEADING">Печать</div>
         <div class="BLOCK_DESCRIPTION">Печать на подготовленных листах бумаги офсетным способом</div>
-        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_CENTER">
+      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
         <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">03</div>
         <div class="BLOCK_HEADING">Послепечатная обработка</div>
         <div class="BLOCK_DESCRIPTION">Работа по подрезке, фальцовке, склейке, сшивке тиража</div>
+      </div>
+    </div>
+    <div class="BLOCK PAGE_PADDING TEXT_CENTER PADDING_B_2">
+      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+      </div>
+      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
+        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+      </div>
+      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
+        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       </div>
     </div>
 
     <div class="BACKGROUND_SMALL MOVE_HEADER_T ANIMATION_DELAY_1">
       <div class="BLOCK PAGE_PADDING TEXT_CENTER PADDING_B_5 MARGIN_B_2">
         <div class="CONTENT_IN_WIDTH PADDING_T_4 PADDING_B_4"></div>
-        <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER">
+        <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER MARGIN_A_05">
           <div class="BLOCK_HEADING">Полный цикл</div>
           <div>Ваш набор полиграфических услуг</div>
         </div>
-        <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER">
+        <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER MARGIN_A_05">
           <div class="BLOCK_HEADING">Доставка</div>
           <div>Из нашего склада прямо к Вам в офис</div>
         </div>
-        <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER">
+        <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER MARGIN_A_05">
           <div class="BLOCK_HEADING">Давальческое сырье</div>
           <div>Полный контроль за материалами</div>
         </div>
@@ -95,29 +103,39 @@
     </div>
 
     <div class="PAGE_PADDING BLOCK_HEADING">НАША ПРОДУКЦИЯ</div>
-    <div class="BLOCK PAGE_PADDING PADDING_B_2">
-      <div class="BLOCK_PART_3">
+    <div class="BLOCK PAGE_PADDING">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="SMALL_IMAGE" src="Images/Home/Printer.jpg" alt="Принтер" title="МФУ для офиса"></div>
         <div>Для офиса</div>
         <div>Печать на конвертах, изготовление визиток, бланков, открыток и плакатов, папок и удостоверений</div>
-        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5 HIDDEN" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="SMALL_IMAGE" src="Images/Home/print_machine.jpg" alt="Печатная машина" title="Полноцветаная печатная машина"></div>
         <div>Полиграфия</div>
         <div>Печать фирменных бланков, изготовление брошюр, книжно-журнальной продукции</div>
-        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="SMALL_IMAGE" src="Images/Home/mini_cutter.png" alt="Листорез" title="Ручной листорезальный станок"></div>
         <div>Работа с бумагой</div>
         <div>Флатовка, резка и подрезка бумаги, заточка плоских ножей бумагорезальных машин</div>
-        <div><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5" title="Узнать больше">Больше</a></div>
       </div>
     </div>
 
+    <div class="BLOCK PAGE_PADDING PADDING_B_2">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
+        <div><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5" title="Узнать больше">Больше</a></div>
+      </div>
+      <div class="BLOCK_PART_3 MARGIN_A_05">
+        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5" title="Узнать больше">Больше</a></div>
+      </div>
+      <div class="BLOCK_PART_3 MARGIN_A_05">
+        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5 HIDDEN" title="Узнать больше">Больше</a></div>
+      </div>
+    </div>
+
+
     <div class="PAGE_PADDING BLOCK CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
-      <div class="BLOCK_PART_1 TEXT_CENTER">
+      <div class="BLOCK_PART_1 TEXT_CENTER MARGIN_A_05">
         <span class="BLOCK_HEADING">СВЯЗАТЬСЯ С НАМИ:</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 237 17 51</span>
