--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>ПРОМПЕЧАТЬ - Узнать больше</title>
+    <title>Промпечать - Узнать больше</title>
   </head>
   <body>
     <div class="BLOCK_FIXED">
@@ -44,32 +44,33 @@
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
         <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear2')">Допечатная подготовка</div>
-        <div class="DISPLAY_NONE MARGIN_B_1" id="appear2">Допечатная подготовка охватывает работу, проводимую непосредственно
+        <div class="DISPLAY_NONE MARGIN_B_1" id="appear2"><i>Допечатная подготовка</i> охватывает работу, проводимую непосредственно
           перед печатью. В процессе допечатной подготовки используется готовый макет заказчика либо проводится набор и верстка
-          макета по содержимому,предоставляемому заказчиком. Макет состоит из страниц, скомпанованных таким образом, чтобы после печати с двух сторон
+          макета по содержимому,предоставляемому заказчиком.<br><br>
+          Макет состоит из страниц, скомпанованных таким образом, чтобы после печати с двух сторон
           печатный лист можно было сложить (сфальцевать) определенным образом и получить при этом запланированный порядок отпечатаннных
           страниц. Операция размещения печатных страниц на листе называется спуском полос и зависит от послепечатной обработки готовой
-          продукции. По готовности макета проводится операция цветоделения. Цветоделение означает разделение цветного изображения макета
-          на несколько монохромных полутоновых составляющих, каждая из которых содержит информацию только об одном цвете. Цветное
-          изображение делится минимум на четыре монохромных полутоновых изображения из которых производится по четыре печатные
-          формы для каждого печатного листа. Печатная форма представляют собой алюминиевую пластину на которую путем экспонирования
-          лазером наносится невидимое изображение. Изображение проявляется с помощью химического травления специальными реагентами.
-          Для изготовления печатных форм мы используем систему CtP, которая позволяет переносить изображение с файла макета
-          непосредственно на печатную форму.
+          продукции. По готовности макета проводится операция цветоделения.<br><br>
+          <i>Цветоделение</i> означает разделение цветного изображения макета на несколько монохромных полутоновых составляющих,
+          каждая из которых содержит информацию только об одном цвете. Цветное изображение делится минимум на четыре монохромных
+          полутоновых изображения из которых производится по четыре печатные формы для каждого печатного листа.
+          <i>Печатная форма</i> представляют собой алюминиевую пластину на которую путем экспонирования лазером наносится невидимое изображение.
+          Изображение проявляется с помощью химического травления специальными реагентами. Для изготовления печатных форм мы используем систему CtP,
+          которая позволяет переносить изображение с файла макета непосредственно на печатную форму.
         </div>
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
         <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear3')">Печать</div>
-        <div class="DISPLAY_NONE MARGIN_B_1" id="appear3">Процесс переноса краски на бумагу называется печатью. Наша типография использует
+        <div class="DISPLAY_NONE MARGIN_B_1" id="appear3">Процесс переноса краски на бумагу называется <i>печатью</i>. Наша типография использует
           разновидность плоского способа печати - офсетную печать. При плоской печати печатные и пробельные элементы
           располагаются в одной плоскости, но соответствуют различным материалам (например алюминий и полимерное покрытие)
           В процессе печати пробельные участки увлажняются для того, чтобы отталкивать краску, затем на печатную форму накатывается
           краска, которая "налипает" только на печатающие элементы. Офсетная печать является непрямым способом печати и
           отличается наличием "офсетного" цилиндра с резинотканевым полотном (декелем), который является промежуточным носителем
-          печатной краски.<br>
+          печатной краски.<br><br>
           На этапе печати подготавливаются печатные краски, на формные цилиндры печатной машины устанавливаются готовые печатные формы,
           а на офсетные цилиндры - подготовленные резинотканевые полотна. В кипсейки красочных ящиков закладывается краска,
-          в машину устанавливается бумага.<br>
+          в машину устанавливается бумага.<br><br>
           Непосредственно при печати происходит перенос изображения, сформированного предварительно раскатанной краской,
           под давлением с печатной формы на печатный лист через офсетный цилиндр.
           <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="Images/More/Dominant-745P.jpeg" alt="Печатная машины" title="Adast Dominant 745P">
@@ -77,20 +78,20 @@
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
         <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear4')">Послепечатные процессы</div>
-        <div class="DISPLAY_NONE MARGIN_B_1" id="appear4">Послепечатнаяобработка продукции охватывает стадии, которые проводятся после
+        <div class="DISPLAY_NONE MARGIN_B_1" id="appear4"><i>Послепечатная обработка<i> продукции охватывает стадии, которые проводятся после
           запечатывания бумаги. В нашей типографии осуществляются такие операции как резка, фальцовка, подборка листов и тетрадей,
-          переплетные работы.<br>
+          переплетные работы.<br><br>
           <i>Фальцовка.</i> В процессе фальцовки печатный лист складывается в один либо несколько сгибов в соответствии со схемой
           спуска полос. После фальцовки и подборки нескольких печатных листов формируется тетрадь, состоящая из последовательно идущих
           страниц издания. При клеевом бесшвейном скреплении отдельные сфальцованные листы размещаются один за другим, вследствие чего
           1-й лист содержит страницы 1–8, а 2-й лист – страницы 9–16. При шитье внакидку сфальцованные листы вкладываются один в
-          другой, при этом 1-й лист содержит внешние 8 страниц (1–4 и 13–16), а 2-й лист – внутренние 8 страниц (5–12).<br>
+          другой, при этом 1-й лист содержит внешние 8 страниц (1–4 и 13–16), а 2-й лист – внутренние 8 страниц (5–12).<br><br>
           <i>Подборка или комплектовка.</i> Если 32-страничная брошюра напечатана по 8 страниц на листе, то она будет состоять
           из 4 тетрадей. При тираже 1000 экземпляров после фальцовки получается 4 стопы по 1000 сфальцованных листов. Они должны быть
           разъединены и размещены в соответствии с заданием. Размещение друг за другом (для клеевого скрепления) называется подборкой и
           выполняется на специальных подборочных машинах. Вкладывание тетрадей одна в другую (для шитья внакидку) осуществляется последовательно.
           Оно большей частью выполняется на вкладочно-швей-но-резальных агрегатах (ВШРА), которые также выполняют рабочие операции по шитью
-          и обрезке.<br>
+          и обрезке.<br><br>
           <i>Клеевое скрепление и шитье проволокой.</i> Корешок подобранных тетрадей для клеевого скрепления брошюры сначала фрезеруется,
           чтобы облегчить проникновение клея. Затем корешок полностью обрабатывается клеем, большей частью расплавленным, накладывается обложка
           и приклеивается к корешку. После машины клеевого скрепления продукция отправляется на трехстороннюю резальную машину.
