--- a/products.html
+++ b/products.html
@@ -35,7 +35,7 @@
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Книги и журналы</div>
           <div>Изготавливаем книги, журналы, справочники, каталоги способом офсетной печати в виде блоков из сшитых
-            либо сшитых и склееных между собой тетрадей.</div>
+            либо сшитых и склеенных между собой тетрадей</div>
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
       </div>
@@ -43,7 +43,7 @@
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/poster.jpg" alt="Афиша" title="Афиша"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Рекламная продукция</div>
-          <div>Изготавливаем рекламные буклеты, афиши, листовки на полноцветных лазерных принтерах и многофункциональных устройствах либо офсетным способом печати.</div>
+          <div>Изготавливаем рекламные буклеты, афиши, листовки на полноцветных лазерных принтерах и многофункциональных устройствах либо офсетным способом печати</div>
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
       </div>
@@ -51,7 +51,7 @@
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/form.jpeg" alt="Коллективный авансовый отчет" title="Бланк"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Бланочная продукция и канцелярские журналы</div>
-          <div>Изготавливаем гербовые бланки, путевые листы, журналы учета и регистрации, приходно-расходны книги</div>
+          <div>Изготавливаем гербовые бланки, путевые листы, журналы учета и регистрации, приходно-расходные книги</div>
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
       </div>
