--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-rim-auto-match" content="none">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
-    <title>ПРОМПЕЧАТЬ - УСЛУГИ</title>
+    <title>Промпечать - Услуги</title>
   </head>
   <body>
     <div class="BLOCK_FIXED">
@@ -30,43 +30,63 @@
 
     <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 TEXT_BOLD MOVE_HEADER_R">НАШИ УСЛУГИ</div>
     <div class="BLOCK PAGE_PADDING">
-      <div class="BLOCK_PART_4">
+      <div class="BLOCK_PART_4 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/roll.png" alt="Ролик" title="Бумажный ролик"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Подготовка бумаги</div>
           <div>Подготовка бумаги заказчика к работе. Флатовка бумажных роликов, подрезка бумаги для тиража по необходимому размеру</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
         </div>
       </div>
-      <div class="BLOCK_PART_4">
+      <div class="BLOCK_PART_4 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Prepress.png" alt="Цветоделение" title="Цветоделение"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Допечатная подготовка</div>
           <div>Верстка макета либо использование готового макета заказчика для цветоделения и подготовки печатных форм в работу</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
         </div>
       </div>
-      <div class="BLOCK_PART_4">
+      <div class="BLOCK_PART_4 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Dominant-745P.jpeg" alt="Печать" title="Печать"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Печать</div>
           <div>Установка печатных форм, раскат краски, подготовка увлажнения и последующая печать с форм на подготовленную бумагу</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
         </div>
       </div>
-      <div class="BLOCK_PART_4">
+      <div class="BLOCK_PART_4 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Romayor-313.png" alt="Послепечатные процессы" title="Лакирование"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Послепечатные процессы</div>
           <div>Лакирование, фальцовка печатных листов в тетрадь либо тетради, подготовка блока издания, подрезка готовых блоков</div>
-          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
         </div>
       </div>
     </div>
 
+    <div class="BLOCK PAGE_PADDING">
+      <div class="BLOCK_PART_4 MARGIN_A_05">
+        <div class="TEXT_CENTER">
+          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
+        </div>
+      </div>
+      <div class="BLOCK_PART_4 MARGIN_A_05">
+        <div class="TEXT_CENTER">
+          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE HIDDEN" title="Узнать больше">Больше</a></div>
+        </div>
+      </div>
+      <div class="BLOCK_PART_4 MARGIN_A_05">
+        <div class="TEXT_CENTER">
+          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE HIDDEN" title="Узнать больше">Больше</a></div>
+        </div>
+      </div>
+      <div class="BLOCK_PART_4 MARGIN_A_05">
+        <div class="TEXT_CENTER">
+          <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE HIDDEN" title="Узнать больше">Больше</a></div>
+        </div>
+      </div>
+    </div>
+
+
     <div class="PAGE_PADDING BLOCK_HEADING TEXT_BOLD PADDING_T_2  MOVE_HEADER_R ANIMATION_DELAY_3">ОБЗОР УСЛУГ</div>
     <div class="BLOCK PAGE_PADDING BACKGROUND_LGRAY PADDING_T_2 MOVE_HEADER_T">
-      <div class="BLOCK_PART_3">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/12.jpeg" alt="Стопа бумаги" title="Стопа бумаги"></div>
         <div>
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1">Работа с бумагой</div>
@@ -81,7 +101,7 @@
           </div>
         </div>
       </div>
-      <div class="BLOCK_PART_3">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/6.jpeg" alt="Подготовка машины" title="Подготовка к печати"></div>
         <div>
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1">Подготовка к печати</div>
@@ -96,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="BLOCK_PART_3">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Postpress.jpg" alt="Postpress" title="Послепечатные процессы"></div>
         <div>
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1">Печать и после печати</div>
