--- a/more.html
+++ b/more.html
@@ -4,7 +4,9 @@
     <meta charset=UTF-8>
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-rim-auto-match" content="none">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/animation.css" type="text/css">
+    <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - Узнать больше</title>
   </head>
@@ -78,7 +80,7 @@
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
         <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear4')">Послепечатные процессы</div>
-        <div class="DISPLAY_NONE MARGIN_B_1" id="appear4"><i>Послепечатная обработка<i> продукции охватывает стадии, которые проводятся после
+        <div class="DISPLAY_NONE MARGIN_B_1" id="appear4"><i>Послепечатная обработка</i> продукции охватывает стадии, которые проводятся после
           запечатывания бумаги. В нашей типографии осуществляются такие операции как резка, фальцовка, подборка листов и тетрадей,
           переплетные работы.<br><br>
           <i>Фальцовка.</i> В процессе фальцовки печатный лист складывается в один либо несколько сгибов в соответствии со схемой
