--- a/more.html
+++ b/more.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset=UTF-8>
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="x-rim-auto-match" content="none">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
@@ -103,12 +103,12 @@
     </div>
 
     <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_4 PADDING_B_4 MARGIN_T_5">
-      <span class="HIDDEN_MOBILE">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
-      <span class="HIDDEN_MOBILE">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
-      <span class="MARGIN_B_1 HIDDEN_MOBILE">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
-      <span class="HIDDEN_MOBILE">Открытое акционерное общество "Промпечать"&nbsp;</span>
-      <span class="HIDDEN_MOBILE">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
-      <span class="HIDDEN_MOBILE">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
+      <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
+      <span class="HIDDEN">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
+      <span class="MARGIN_B_1 HIDDEN">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
+      <span class="HIDDEN">Открытое акционерное общество "Промпечать"&nbsp;</span>
+      <span class="HIDDEN">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
+      <span class="HIDDEN">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
       <span class="MARGIN_T_1">&copy;2020 Минск</span>
     </div>
   </body>
