--- a/contacts.html
+++ b/contacts.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset=UTF-8>
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="x-rim-auto-match" content="none">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
@@ -37,18 +37,18 @@
 
     <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
       <div class="BLOCK_PART_2 MARGIN_A_05">
-        <span class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 237 17 51</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">prompechat@mail.ru</span>
-        <span class="BLOCK_HEADING">НАШ АДРЕС:</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD">Республика Беларусь</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">г. Минск, ул. Черняховского 3</span>
-        <span class="BLOCK_HEADING">МЫ РАБОТАЕМ:</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD">Пн Вт Ср Чт Пт: 8.00-16.30</span>
-        <span class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">Обед: 12.00-12.30</span>
+        <div class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</div>
+        <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</div>
+        <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 237 17 51</div>
+        <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2 TEXT_NORMAL">prompechat@mail.ru</div>
+        <div class="BLOCK_HEADING">НАШ АДРЕС:</div><br>
+        <div class="TEXT_GIGANTIC TEXT_BOLD HIDDEN">Республика Беларусь</div>
+        <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">г. Минск, ул. Черняховского 3</div>
+        <div class="BLOCK_HEADING">МЫ РАБОТАЕМ:</div><br>
+        <div class="TEXT_GIGANTIC TEXT_BOLD">Пн Вт Ср Чт Пт: 8.00-16.30</div>
+        <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">Обед: 12.00-12.30</div>
       </div>
-      <div class="BLOCK_PART_2 MARGIN_A_05">
+      <div class="BLOCK_PART_2 MARGIN_A_05 HIDDEN">
         <span class="BLOCK_HEADING">НАПИШИТЕ НАМ НА ПОЧТУ:</span>
         <form name="INFO" class="CONTENT_IN_WIDTH">
           <input class="INPUT MARGIN_B_2" type="text" name="NAME" placeholder="Имя" required><br>
@@ -62,12 +62,12 @@
     <script type='text/javascript' src='JS/submit_form.js'></script>
 
     <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_2 PADDING_B_2">
-      <span class="HIDDEN_MOBILE">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
-      <span class="HIDDEN_MOBILE">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
-      <span class="MARGIN_B_1 HIDDEN_MOBILE">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
-      <span class="HIDDEN_MOBILE">Открытое акционерное общество "Промпечать"&nbsp;</span>
-      <span class="HIDDEN_MOBILE">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
-      <span class="HIDDEN_MOBILE">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
+      <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
+      <span class="HIDDEN">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
+      <span class="MARGIN_B_1 HIDDEN">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
+      <span class="HIDDEN">Открытое акционерное общество "Промпечать"&nbsp;</span>
+      <span class="HIDDEN">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
+      <span class="HIDDEN">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
       <span class="MARGIN_T_1">&copy;2020 Минск</span>
     </div>
   </body>
