--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset=UTF-8>
-    <meta name="format-detection" content="telephone=no">
-    <meta http-equiv="x-rim-auto-match" content="none">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
@@ -52,31 +52,47 @@
       <div>Наша типография занимается полиграфическим производством начиная от флатовки бумажного ролика и заканчивая готовой книжно-журнальной продукцией</div>
     </div>
     <div class="FLEX_COLUMN PADDING_A_5_10_5_10">
-      <div class="TEXT_HUGE TEXT_BOLD MARGIN_B_1">Наши услуги</div>
-      <div class="TEXT_BIG">Понимание процесса полиграфического производства</div>
-      <div class="TEXT_SLIM">Вы можете увидеть краткое описание каждого из основных циклов нашего производства нажав по ссылкам ниже</div>
+      <div class="TEXT_HUGE TEXT_BOLD MARGIN_B_1 HIDDEN">Наши услуги</div>
+      <div class="TEXT_BIG HIDDEN">Понимание процесса полиграфического производства</div>
+      <div class="TEXT_SLIM HIDDEN">Вы можете увидеть краткое описание каждого из основных циклов нашего производства нажав по ссылкам ниже</div>
     </div>
 
     <div class="BLOCK PAGE_PADDING TEXT_CENTER">
-      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
+      <div class="BLOCK_PART_3 MARGIN_A_05 CONTENT_CENTER">
         <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">01</div>
+        <div class="BLOCK_HEADING HIDDEN">Допечатная подготовка</div>
+        <div class="BLOCK_DESCRIPTION HIDDEN">Подготовка макета, печатных форм и бумаги</div>
+      </div>
+      <div class="BLOCK_PART_3 MARGIN_A_05 CONTENT_CENTER">
+        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">02</div>
+        <div class="BLOCK_HEADING HIDDEN">Печать</div>
+        <div class="BLOCK_DESCRIPTION HIDDEN">Печать на подготовленных листах бумаги офсетным способом</div>
+      </div>
+      <div class="BLOCK_PART_3 MARGIN_A_05 CONTENT_CENTER">
+        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">03</div>
+        <div class="BLOCK_HEADING HIDDEN">Послепечатная обработка</div>
+        <div class="BLOCK_DESCRIPTION HIDDEN">Работа по подрезке, фальцовке, склейке, сшивке тиража</div>
+      </div>
+    </div>
+    <div class="PAGE_PADDING BLOCK_HEADING HIDDEN_DESKTOP">НАШИ УСЛУГИ</div>
+    <div class="BLOCK PAGE_PADDING HIDDEN_DESKTOP">
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div class="BLOCK_HEADING">Допечатная подготовка</div>
         <div class="BLOCK_DESCRIPTION">Подготовка макета, печатных форм и бумаги</div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
-        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">02</div>
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div class="BLOCK_HEADING">Печать</div>
         <div class="BLOCK_DESCRIPTION">Печать на подготовленных листах бумаги офсетным способом</div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
-        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">03</div>
+      <div class="BLOCK_PART_3 MARGIN_A_05">
         <div class="BLOCK_HEADING">Послепечатная обработка</div>
         <div class="BLOCK_DESCRIPTION">Работа по подрезке, фальцовке, склейке, сшивке тиража</div>
       </div>
     </div>
     <div class="BLOCK PAGE_PADDING TEXT_CENTER PADDING_B_2">
+      <div class="HIDDEN_DESKTOP"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
         <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
@@ -146,12 +162,12 @@
     </div>
 
     <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_2 PADDING_B_2">
-        <span class="HIDDEN_MOBILE">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
-        <span class="HIDDEN_MOBILE">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
-        <span class="MARGIN_B_1 HIDDEN_MOBILE">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
-        <span class="HIDDEN_MOBILE">Открытое акционерное общество "Промпечать"&nbsp;</span>
-        <span class="HIDDEN_MOBILE">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
-        <span class="HIDDEN_MOBILE">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
+        <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
+        <span class="HIDDEN">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
+        <span class="MARGIN_B_1 HIDDEN">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
+        <span class="HIDDEN">Открытое акционерное общество "Промпечать"&nbsp;</span>
+        <span class="HIDDEN">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
+        <span class="HIDDEN">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
         <span class="MARGIN_T_1">&copy;2020 Минск</span>
     </div>
   </body>
