--- a/services.html
+++ b/services.html
@@ -91,8 +91,8 @@
       <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/12.jpeg" alt="Стопа бумаги" title="Стопа бумаги"></div>
         <div>
-          <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1">Работа с бумагой</div>
-          <div class="MARGIN_L_1">
+          <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1 TEXT_CENTER">Работа с бумагой</div>
+          <div>
             <ul>
               <li class="MARGIN_B_05">Хранение бумаги заказчика в роликах и стапелях в закрытых помещениях</li>
               <li class="MARGIN_B_05">Флатовка бумажных роликов с последующей подрезкой</li>
@@ -106,8 +106,8 @@
       <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/6.jpeg" alt="Подготовка машины" title="Подготовка к печати"></div>
         <div>
-          <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1">Подготовка к печати</div>
-          <div class="MARGIN_L_1">
+          <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1 TEXT_CENTER">Подготовка к печати</div>
+          <div>
             <ul>
               <li class="MARGIN_B_05">Подбор бумаги и печатных красок для заказа</li>
               <li class="MARGIN_B_05">Верстка текстового содержимого макета, подготовка и размещение изображений</li>
@@ -121,8 +121,8 @@
       <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Postpress.jpg" alt="Postpress" title="Послепечатные процессы"></div>
         <div>
-          <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1">Печать и после печати</div>
-          <div class="MARGIN_L_1">
+          <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1 TEXT_CENTER">Печать и после печати</div>
+          <div>
             <ul>
               <li class="MARGIN_B_05">Цветная печать офсетным способом форматов до 60х84&nbsp;см в 4 краски с оборотом</li>
               <li class="MARGIN_B_05">Черно-белая печать на лазерном МФУ форматом до А3+ с оборотом</li>
