--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
       </div>
       <div class="MENU TEXT_WHITE">
       <ul>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="home.html" class="MENU_BUTTON" title="Главная страница">ГЛАВНАЯ</a></li>
+        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="index.html" class="MENU_BUTTON" title="Главная страница">ГЛАВНАЯ</a></li>
         <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="about.html" class="MENU_BUTTON" title="Узнать о нас">О НАС</a></li>
         <li class="MENU_POINT TEXT_BOLD TEXT_BIG BUTTON_SELECTED"><a href="#" class="MENU_BUTTON" title="Текущая страница">ПРОДУКЦИЯ</a></li>
         <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="services.html" class="MENU_BUTTON" title="Наши услуги">УСЛУГИ</a></li>
