--- a/contacts.html
+++ b/contacts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -37,12 +37,12 @@
 
     <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
       <div class="BLOCK_PART_2 MARGIN_A_05">
-        <div class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</div>
+        <div class="BLOCK_HEADING MARGIN_B_1">СВЯЖИТЕСЬ С НАМИ:</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 237 17 51</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2 TEXT_NORMAL">prompechat@mail.ru</div>
         <div class="BLOCK_HEADING">НАШ АДРЕС:</div><br>
-        <div class="TEXT_GIGANTIC TEXT_BOLD HIDDEN">Республика Беларусь</div>
+        <div class="TEXT_GIGANTIC TEXT_BOLD">Республика Беларусь</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">г. Минск, ул. Черняховского 3</div>
         <div class="BLOCK_HEADING">МЫ РАБОТАЕМ:</div><br>
         <div class="TEXT_GIGANTIC TEXT_BOLD">Пн Вт Ср Чт Пт: 8.00-16.30</div>
@@ -53,13 +53,13 @@
         <form name="INFO" class="CONTENT_IN_WIDTH">
           <input class="INPUT MARGIN_B_2" type="text" name="NAME" placeholder="Имя" required><br>
           <input class="INPUT MARGIN_B_2" type="text" name="PHONE" placeholder="Номер телефона" required><br>
-          <textarea class="TEXTAREA MARGIN_B_2" type="text" name="TEXTAREA" placeholder="Ваше сообщение" required></textarea><br>
+          <textarea class="TEXTAREA MARGIN_B_2" name="TEXTAREA" placeholder="Ваше сообщение" required></textarea><br>
           <input class="MORE TEXT_WHITE APPEARANCE SUBMIT" type="submit" name="SUBMIT" placeholder="Отправить">
         </form>
       </div>
     </div>
 
-    <script type='text/javascript' src='JS/submit_form.js'></script>
+    <script src='JS/submit_form.js'></script>
 
     <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_2 PADDING_B_2">
       <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
