--- a/more.html
+++ b/more.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -30,7 +30,7 @@
     </div>
     <div class="BLOCK_HIDDEN_BIG"></div>
 
-    <script type='text/javascript' src='JS/block_show-hide.js'></script>
+    <script src='JS/block_show-hide.js'></script>
 
     <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 MARGIN_B_2 TEXT_BOLD MOVE_HEADER_R">УЗНАТЬ БОЛЬШЕ</div>
     <div class="PAGE_PADDING">
