--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
   <head>
     <meta charset=UTF-8>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-    <script type='text/javascript' src='JS/slider.js'></script>
+    <script src='JS/slider.js'></script>
 
     <div class="FLEX_ROW BACKGROUND_DBLUE TEXT_WHITE PADDING_A_5_10_5_10">
       <div class="TEXT_BIGGEST TEXT_BOLD TEXT_GOLD FLEX_BASIS_30">ДОБРО ПОЖАЛОВАТЬ!</div>
