--- a/contacts.html
+++ b/contacts.html
@@ -37,14 +37,14 @@
 
     <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
       <div class="BLOCK_PART_2 MARGIN_A_05">
-        <div class="BLOCK_HEADING MARGIN_B_1">СВЯЖИТЕСЬ С НАМИ:</div>
+        <div class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 237 17 51</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2 TEXT_NORMAL">prompechat@mail.ru</div>
-        <div class="BLOCK_HEADING">НАШ АДРЕС:</div><br>
+        <div class="BLOCK_HEADING">НАШ АДРЕС:</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">Республика Беларусь</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">г. Минск, ул. Черняховского 3</div>
-        <div class="BLOCK_HEADING">МЫ РАБОТАЕМ:</div><br>
+        <div class="BLOCK_HEADING">МЫ РАБОТАЕМ:</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">Пн Вт Ср Чт Пт: 8.00-16.30</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD MARGIN_B_2">Обед: 12.00-12.30</div>
       </div>
