--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   </head>
   <body>
     <div class="BLOCK_FIXED">
-      <div class="UPPER_HEAD TEXT_WHITE">
+      <div class="UPPER_HEAD TEXT_WHITE"><a href="index.html" class="MENU_BUTTON">
         <div>Открытое акционерное общество</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">"ПРОМПЕЧАТЬ"</div>
         <div>полиграфические услуги</div>
-      </div>
+      </a></div>
       <div class="MENU TEXT_WHITE">
       <ul>
         <li class="MENU_POINT TEXT_BOLD TEXT_BIG BUTTON_SELECTED"><a href="#" class="MENU_BUTTON" title="Текущая страница">ГЛАВНАЯ</a></li>
