delete animation in about page

--- a/about.html
+++ b/about.html
@@ -42,14 +42,14 @@
     <div class="BLOCK_PART_3 MARGIN_A_05">
     <div class="TEXT_BOLD TEXT_BIG MARGIN_B_2 MOVE_HEADER_T">ЧТО&nbsp;МЫ&nbsp;ПРЕДЛАГАЕМ</div>
     <div class="FLEX_ROW">
-      <div class="CIRCLE_SMALL TEXT_WHITE APPEARANCE">01</div>
+      <div class="CIRCLE_SMALL TEXT_WHITE">01</div>
       <div class="FLEX_1">
         <div class="TEXT_GREEN TEXT_BOLD">ОПЫТНЫЕ СПЕЦИАЛИСТЫ</div>
         <div class="TEXT_SMALL MARGIN_B_2">Мы готовы не только подобрать необходимые материалы для заказа, но и изготовить оригинал-макет любой сложности</div>
       </div>
     </div>
     <div class="FLEX_ROW">
-      <div class="CIRCLE_SMALL TEXT_WHITE APPEARANCE ANIMATION_DELAY_1">02</div>
+      <div class="CIRCLE_SMALL TEXT_WHITE">02</div>
       <div class="FLEX_1">
         <div class="TEXT_GREEN TEXT_BOLD">ОПЕРАТИВНОСТЬ</div>
         <div class="TEXT_SMALL MARGIN_B_2">Мы работаем с периодическими изданиями, поэтому стараемся предоставлять готовую продукцию нашим клиентам
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="FLEX_ROW">
-      <div class="CIRCLE_SMALL TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">03</div>
+      <div class="CIRCLE_SMALL TEXT_WHITE">03</div>
       <div class="FLEX_1">
         <div class="TEXT_GREEN TEXT_BOLD">УДОБНОЕ РАСПОЛОЖЕНИЕ</div>
         <div class="TEXT_SMALL MARGIN_B_2">Наше предприятие находится недалеко от центра города в отдельно стоящем здании
@@ -66,7 +66,7 @@
       </div>
     </div>
     <div class="FLEX_ROW">
-      <div class="CIRCLE_SMALL TEXT_WHITE APPEARANCE ANIMATION_DELAY_3">04</div>
+      <div class="CIRCLE_SMALL TEXT_WHITE">04</div>
       <div class="FLEX_1">
         <div class="TEXT_GREEN TEXT_BOLD">ДОСТАВКА ПРОДУКЦИИ</div>
         <div class="TEXT_SMALL MARGIN_B_2">У нас имеется собственный автомобиль и  мы готовы доставить нашу продукцию в любую точку
