--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </div>
 
-    <div class="PAGE_PADDING BLOCK_HEADING">НАША ПРОДУКЦИЯ</div>
+    <div class="PAGE_PADDING BLOCK_HEADING TEXT_CENTER">НАША ПРОДУКЦИЯ</div>
     <div class="BLOCK PAGE_PADDING">
       <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="SMALL_IMAGE" src="Images/Home/Printer.jpg" alt="Принтер" title="МФУ для офиса"></div>
